# foundry90

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
capstones/: README.md
capstones/therealtplum/apps/hadron/: Cargo.toml  Dockerfile  README.md
capstones/therealtplum/apps/hadron/docs/: HADRON_V2_STARTING_POINT.md  KALSHI_IMPLEMENTATION_STATUS.md  KALSHI_INSTRUMENT_NORMALIZATION_PROPOSAL.md  KALSHI_INTEGRATION_COMPLETE.md  KALSHI_INTEGRATION_GUIDE.md  KALSHI_INTEGRATION_PLAN.md  KALSHI_INTEGRATION_SUMMARY.md  KALSHI_NORMALIZATION_DESIGN.md  KALSHI_REQUIREMENTS.md  KALSHI_TICKER_PARSER_PHASE1_COMPLETE.md  KALSHI_WEBSOCKET_PROTOCOL.md  MACOS_BUILD_RESULTS.md  MERGE_READINESS_ASSESSMENT.md  README.md  polygon_plan_limitations.md  status_and_roadmap.md
capstones/therealtplum/apps/hadron/docs/status/: HADRON_STATUS.md  KALSHI_INTEGRATION_COMPLETE.md  KALSHI_NORMALIZATION_STATUS.md  KALSHI_PARSER_PHASE1_COMPLETE.md
capstones/therealtplum/apps/hadron/docs/status/archive/: KALSHI_NORMALIZATION_DESIGN.md
capstones/therealtplum/apps/hadron/src/: main.rs  schemas.rs
capstones/therealtplum/apps/hadron/src/coordinator/: mod.rs
capstones/therealtplum/apps/hadron/src/engine/: mod.rs
capstones/therealtplum/apps/hadron/src/gateway/: mod.rs
capstones/therealtplum/apps/hadron/src/ingest/: kalshi.rs  mod.rs
capstones/therealtplum/apps/hadron/src/normalize/: kalshi.rs  mod.rs
capstones/therealtplum/apps/hadron/src/recorder/: mod.rs
capstones/therealtplum/apps/hadron/src/router/: mod.rs
capstones/therealtplum/apps/hadron/src/strategies/: mod.rs
capstones/therealtplum/apps/rust-api/: .env.example  Cargo.toml  Dockerfile  run.sh
capstones/therealtplum/apps/rust-api/src/: auth.rs  env_config.rs  fred.rs  kalshi.rs  main.rs  system_health.rs
curriculum/: 01_overview_and_syllabus.md  02_readings.md  03_weekly_exercises.md  (+7 more)
(+260 files in other folders)
