[package]
name = "hadron"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "macros",
    "uuid",
    "rust_decimal"
] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-stream = "0.1"
# RSA-PSS signing for Kalshi authentication
rsa = { version = "0.9", features = ["sha2"] }
pkcs1 = "0.7"
pkcs8 = "0.10"
base64 = "0.22"
rand = "0.8"

